--- a/views/pages/public/createaccount.hbs
+++ b/views/pages/public/createaccount.hbs
@@ -4,7 +4,7 @@
             <div {{#if disablePaymentSidebar}}class="createAccCenter"{{/if}}>
                 {{> _h1styled headerTitle="Create Account"}}
                 <div class="subheader-container">
-                    <p class="create-acc-p-subheader-style {{#if disablePaymentSidebar}}text-center{{/if}}">Reserve your room now! Create an account to proceed.</p>
+                    {{#unless disablePaymentSidebar}}<p class="create-acc-p-subheader-style">Reserve your room now! Create an account to proceed.</p>{{/unless}}
                     <p class="create-acc-p-subheader-style {{#if disablePaymentSidebar}}text-center{{/if}} mt-2">Already have an account? <a class="login-link" href="#">Login</a></p>
                 </div>
                 <div class="card">
