--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -2,28 +2,28 @@
     <h4>Sanam</h4>
     <ul>
         <li>[DONE, TESTED & REVIEWED]<a href="/createaccount"> Create Account Page</a></li>
-        <li><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
-        <li><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
-        <li><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
-        <li><a href="/guestrooms">Guest Rooms Page []</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/guestrooms">Guest Rooms Page []</a></li>
     </ul>
 
     <h4>Nischal</h4>
     <ul>
-        <li>Header & Footer [done - minor/less adjustments needed ]</li>
-        <li>[pending]<a href="/home"> Landings Page </a></li>
-        <li>[pending]<a href="/reservations"> Guest Confirmed Reservations Page</a></li>
-        <li>[pending]<a href="/loyalty"> Guest Loyalty History Page </a></li>
-        <li>[pending]<a href="/editaccount"> Guest Edit Account Page </a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span> Header & Footer [done - minor/less adjustments needed ]</li>
+        <li><span style="color:red">[pending]</span><a href="/home"> Landings Page </a></li>
+        <li><span style="color:red">[pending]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
+        <li><span style="color:red">[pending]</span><a href="/loyalty"> Guest Loyalty History Page </a></li>
+        <li><span style="color:red">[pending]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
     </ul>
 
     <h4>Taslima</h4>
     <ul>
         <li>[DONE, TESTED & REVIEWED]<a href="/about"> About Us [minor adjustments]</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
-        <li><a href="/update-email">Update Email [done - minor adjustments]</a></li>
-        <li><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
-        <li><a href="/">Room Results [done - needs uploading]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/update-email">Update Email [done - minor adjustments]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/">Room Results [done - needs uploading]</a></li>
     </ul>
 
     <h4>Marvie</h4>
@@ -36,19 +36,20 @@
             <li><a href=""> Guest Edit Account</a></li>
         </div>
         <li>Static pages</li>
-        <li><a href="/restaurant">Restaurant Page</a></li>
-        <li><a href="">Hotel Faqs & Policies</a></li>
+        <li><span style="color:red">[pending]</span><a href="/restaurant">Restaurant Page</a></li>
+        <li><span style="color:red">[pending]</span><a href="">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
-        <li><a href="">Forgot Password</a></li>
+        <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
+        <li><span style="color:red">[pending]</span><a href="">Forgot Password Verify</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
-        <li><a href=""> Checkout Reservation Details</a></li>
-        <li><a href=""> User Reservation Details</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout/reservationinfo"> Checkout Reservation Details</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
-        <li><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
         <div style="display:none">
             <li><a href=""> Hotel Staff View Guests Checking In</a></li>
             <li><a href=""> Hotel Staff Inquiries Page</a></li>
