--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -21,6 +21,12 @@
   <link rel="stylesheet" href="/css/partials/{{this.name}}">
     {{/each}}
   {{/if}}
+  {{#if addFlatPicker}}
+    <!-- Flatpickr CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <!-- Flatpickr JS -->
+    <script defer src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  {{/if}}
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
