--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -45,11 +45,11 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout/reservationinfo"> Checkout Reservation Details</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> User Reservation Details</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/adssadsa"> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
-        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations List</a></li>
         <div style="display:none">
             <li><a href=""> Hotel Staff View Guests Checking In</a></li>
             <li><a href=""> Hotel Staff Inquiries Page</a></li>
