--- a/views/partials/formContents/_guestInfo.hbs
+++ b/views/partials/formContents/_guestInfo.hbs
@@ -1,5 +1,5 @@
-<h1 class="text-justify mb-4 form-header-style">Enter your details</h1>
-<div>
+<h1 class="text-justify mb-4 form-header-style">{{#if headerText}}{{headerText}}{{/if}}{{#unless headerText}}Enter your details{{/unless}}</h1>
+<div class="{{#if readOnly}}d-none{{/if}}">
     <h6 class="form-content-h6-style">Who are you booking for?</h6> 
     {{!-- Add javascript later for Radio Buttons --}}
         <div class="form-check">
@@ -19,25 +19,25 @@
     <h6 class="form-content-h6-style mt-4">Main Guest Details</h6> 
     <div class="row">
         <div class="col-md-6">
-            <label for="inputfirstName" class="form-label">First Name*</label>
-            <input type="text" name="firstName" class="form-control" aria-label="First name" id="inputfirstName" required>
+            <label for="inputfirstName" class="form-label {{#if readOnly}}no-border{{/if}}">First Name*</label>
+            <input type="text" name="firstName" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="First name" id="inputfirstName" required>
             <div class="invalid-feedback">
                 Please enter your firstname
             </div>
         </div>
-        <div class="col-md-6 mt-2">
-            <label for="inputLastName" class="form-label">Last Name*</label>
-            <input type="text" name="lastName" class="form-control" aria-label="Last name" id="inputLastName" required>
+        <div class="col-md-6 mt-2 mt-md-0">
+            <label for="inputLastName" class="form-label {{#if readOnly}}no-border{{/if}}">Last Name*</label>
+            <input type="text" name="lastName" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="Last name" id="inputLastName" required>
             <div class="invalid-feedback">
                 Please enter your lastname
             </div>
         </div>
-        <div class="mb-2">
-            <label for="inputMobileNumber" class="form-label">Mobile Number</label>
-            <input type="tel"  name="mobileNumber" class="form-control" aria-label="Mobile Number" id="inputMobileNumber">
-            <div class="invalid-feedback">
-                Please enter your mobile Number
-            </div>
+    </div>
+    <div class="mb-2 mt-2 mt-md-0">
+        <label for="inputMobileNumber" class="form-label {{#if readOnly}}no-border{{/if}}">Mobile Number</label>
+        <input type="tel"  name="mobileNumber" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="Mobile Number" id="inputMobileNumber">
+        <div class="invalid-feedback">
+            Please enter your mobile Number
         </div>
     </div>
 </div>
@@ -45,8 +45,8 @@
     <h6 class="form-content-h6-style mt-4">Main Guest Address</h6> 
 
     <div class="mb-2">
-        <label for="inputAddress" class="form-label">Address *</label>
-        <input type="text"  name="address" class="form-control" aria-label="Mobile Number" id="inputAddress" required>
+        <label for="inputAddress" class="form-label {{#if readOnly}}no-border{{/if}}">Address *</label>
+        <input autocomplete=false ="text"  name="address" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="Mobile Number" id="inputAddress" required>
         <div class="invalid-feedback">
             Please enter your Address
         </div>
@@ -54,22 +54,22 @@
 
     <div class="row mb-2 mt-2">
         <div class="col-md-6">
-            <label for="inputCity" class="form-label">City *</label>
-            <input type="text" name="city" class="form-control" aria-label="City" id="inputCity" required>
+            <label for="inputCity" class="form-label {{#if readOnly}}no-border{{/if}}">City *</label>
+            <input type="text" name="city" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="City" id="inputCity" required>
             <div class="invalid-feedback">
                 Please enter your City
             </div>
         </div>
-        <div class="col-md-6">
-            <label for="inputPostalCode" class="form-label">Postal Code *</label>
-            <input type="text" name="postalCode" class="form-control" aria-label="Postal Code" id="inputPostalCode" required>
+        <div class="col-md-6 mt-2 mt-md-0">
+            <label for="inputPostalCode" class="form-label {{#if readOnly}}no-border{{/if}}">Postal Code *</label>
+            <input type="text" name="postalCode" class="form-control {{#if readOnly}}no-border{{/if}}" aria-label="Postal Code" id="inputPostalCode" required>
             <div class="invalid-feedback">
                 Please enter your Postal Code
             </div>
         </div>
     </div>
 
-    {{> formContents/_countrySelect selectId="inputCountry" selectName="country" selectTitle="Country" required=true}}
+    {{> formContents/_countrySelect selectId="inputCountry" selectName="country" selectTitle="Country" required=true readOnly=readOnly}}
     
 
 </div>
