added routing and links

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -50,15 +50,17 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations List</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff View Guests Checking In</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff Inquiries Page</a></li>
+        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff Create Reservations Page</a></li>
         <div style="display:none">
-            <li><a href=""> Hotel Staff View Guests Checking In</a></li>
-            <li><a href=""> Hotel Staff Inquiries Page</a></li>
-            <li><a href=""> Hotel Staff Create Reservations Page</a></li>
+            <li><a href=""> Manager Dashboard Page</a></li>
             <li><a href=""> Manager Generate Report Page</a></li>
             <li><a href=""> Manager Manage Rooms Page</a></li>
             <li><a href=""> Manager Manage Promotions Page</a></li>
             <li><a href=""> Manager Manage Offers Page</a></li>
             <li><a href=""> Manager Manage Promotions Page</a></li>
+            <li><a href=""> Admin Dashboard Page</a></li>
             <li><a href=""> Admin Manage User Accounts Page</a></li>
             <li><a href=""> Admin Create User Accounts Page</a></li>
             <li><a href=""> Admin Manage Permissions Page</a></li>
