--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -2,14 +2,16 @@
     <div class="dashboard-page-wrapper">
         <div class="dashboard-page-content-container">
             {{> _accountInfoSideBar img=sidebarData.img firstName=sidebarData.firstName lastName=sidebarData.lastName employeeType=sidebarData.employeeType 
-                emailAddress=sidebarData.emailAddress address=sidebarData.address mobileNumber=sidebarData.mobileNumber}}
+                emailAddress=sidebarData.emailAddress address=sidebarData.address mobileNumber=sidebarData.mobileNumber urlPassword="/dashboard/staff/changePassword"
+                urlPhoto="/dashboard/staff/updatePhoto"
+                }}
             <div class="dashboard-main-section-container">
                 <div class="dashboard-main-top">
                     <div>
                         <div>
                             <h2 class="dash-h2-style">Hello, Shawna M.</h2>
                         </div>
-                        <button type="button" class="btn btn-outline-primary">Edit Profile</button>
+                        <a href="/dashboard/staff/edit"><button type="button" class="btn btn-outline-primary">Edit Profile</button></a>
                     </div>
                     <div>
                         <h3 class="dash-h3-style">Today is Feb 23, 2024</h3>
@@ -17,7 +19,7 @@
                 </div>
                 <div class="dashboard-main-mid">
                     <p class="dash-p-mid-style">3 Guests are checking in today</p>
-                    <a class="dash-a-mid-style" href="">VIEW LIST</a>
+                    <a class="dash-a-mid-style" href="/dashboard/staff/checkin">VIEW LIST</a>
                 </div>
                 <hr>
                 <div class="dashboard-main-bottom">
