refactored search to become a partial

--- a/views/pages/employee/guestCheckinList.hbs
+++ b/views/pages/employee/guestCheckinList.hbs
@@ -1,8 +1,8 @@
 <div class="view-reservation-page-container">
     <div class="view-reservation-page-wrapper">
-        {{> _h1styled headerTitle="Find a Reservation"}}
-
-        {{> _search searchOptionsList=searchOptionsList searchControlUrl=searchControlUrl placeholder="Search for a Reservation"}}
+        {{> _h1styled headerTitle="Guests Checking In"}}
+       
+        {{> _search searchOptionsList=searchOptionsList searchControlUrl=searchControlUrl placeholder="Search for Guests Checking in Today"}}
         
         <div class="reservation-results-view-container">
             <table class="table table-striped">
