--- a/public/css/employee/checkin.css
+++ b/public/css/employee/checkin.css
@@ -8,7 +8,10 @@
     flex: 1;
 }
 
-
+/* Override  */
+.view-reservation-filter-container{
+    max-width: 50em !important;
+}
 @media screen and (max-width: 992px) {
 
 }
