--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -50,9 +50,9 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations List</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff View Guests Checking In</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff Inquiries Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Hotel Staff Create Reservations Page</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/staff/checkin"> Hotel Staff View Guests Checking In</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/staff/inquiries"> Hotel Staff Inquiries Page</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/staff/createReservations"> Hotel Staff Create Reservations Page</a></li>
         <div style="display:none">
             <li><a href=""> Manager Dashboard Page</a></li>
             <li><a href=""> Manager Generate Report Page</a></li>
